--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
     <!-- Save Conf -->
     <div class="save-confirmed" hidden>
-       <h1>ADDED!</h1> 
+       <h1>ADDED TO FAVORITES!</h1> 
     </div>
 
     <!-- Script -->
